<resources>
    <string name="app_name">ADAMANT Messenger</string>
    <string name="activity_splash_text">Receiving account information</string>
    <string name="activity_login_tv_title">ADAMANT</string>
    <string name="activity_login_tv_subtitle">A top-notch anonymous messenger encrypted with a Blockchain</string>
    <string name="activity_login_tv_create_new_suggestion">Or create a new anonymous address:</string>
    <string name="activity_login_tv_new_password_label"><b>Save</b> the passphrase for new Wallet and Messenger account. There is no login to enter Wallet, only the passphrase needed. If lost, no way to recover it.</string>
    <string name="activity_login_et_pass_phrase">Enter your passphrase</string>
    <string name="activity_login_btn_enter">Login now</string>
    <string name="activity_login_btn_enter_in_net">Login in net</string>
    <string name="activity_login_tv_login_by_qr">Login by stored QR-code:</string>
    <string name="activity_login_btn_new_account">Or create new anonymous address</string>
    <string name="activity_show_qrcode_title_passphrase">QR-code of passphrase</string>
    <string name="activity_show_qrcode_title_address">QR-code of address</string>
    <string name="activity_registration_tv_title">Creating new address</string>
    <string name="activity_registration_btn_refresh_passphrase">Generate other passphrases</string>
    <string name="activity_registration_tv_generate_passphrase">Generate passphrase</string>
    <string name="activity_registration_btn_save_qr">Save passphrase as qr-code</string>
    <string name="activity_registration_btn_create_address">Login</string>
    <string name="activity_nodes_list_title">Nodes</string>
    <string name="activity_nodes_list_new_node_placeholder">protocol://IP:port</string>
    <string name="activity_nodes_list_add_new_node">Add new node</string>
    <string name="activity_nodes_list_dialog_delete_node">Are you sure you want to delete this node from list?</string>
    <string name="activity_nodes_list_active_node_status">Node %s, Ping: %.0f ms</string>
    <string name="activity_nodes_list_inactive_node_status">Node %s</string>
    <string name="activity_nodes_reset_to_defaults">Reset to defaults</string>
    <string name="activity_all_transactions_title">%s transactions</string>
    <string name="activity_pincode_enter_pincode">Enter pin-code</string>
    <string name="activity_pincode_enter_new_pincode">Enter new pin-code</string>
    <string name="activity_pincode_confirm">Confirm pin-code</string>
    <string name="activity_pincode_remove_pin">Remove PIN</string>
    <string name="activity_create_chat_recipient">Recipient address</string>
    <string name="activity_create_chat_send">Start new chat</string>
    <string name="dialog_rename_contact_title">Rename contact</string>
    <string name="dialog_rename_contact_name">Contact name</string>
    <string name="dialog_rename_contact_cost">Renaming cost is 0.001 ADM</string>
    <string name="activity_chats_action_create_new">Start a new chat</string>
    <string name="activity_messages_btn_send">Send</string>
    <string name="activity_messages_tv_cost_text">Cost of message</string>
    <string name="activity_messages_ev_message_placeholder">~0.001 ADM</string>
    <string name="activity_messages_action_rename">Rename</string>
    <string name="activity_messages_action_copy">Copy address</string>
    <string name="activity_messages_action_qrcode">Show QR-code</string>
    <string name="activity_messages_action_type">Type message</string>
    <string name="activity_show_qr_code_title">QR-Code</string>
    <string name="activity_show_qr_code_btn_save">Save qr-code in gallery</string>
    <string name="activity_scan_qrcode_title">Scan QR-code</string>
    <string name="activity_push_subscription_title">Push services</string>
    <string name="activity_push_subscription_notifications_type">Push service type</string>
    <string name="activity_push_subscription_about_title">About push service types</string>
    <string name="activity_push_subscription_select_type_title">Select service type</string>
    <string name="activity_send_funds_title">Send funds</string>
    <string name="activity_send_funds_recipient_address_hint">Recipient address</string>
    <string name="activity_send_funds_dialog_funds_title">Transfer confirmation</string>
    <string name="activity_send_funds_dialog_funds_message">Confirm transfer of %s %s to address %s.</string>
    <string name="activity_transfer_details_amount">Amount</string>
    <string name="activity_transfer_details_status">Status</string>
    <string name="activity_transfer_details_date">Date</string>
    <string name="activity_transfer_details_confirmations">Confirmations</string>
    <string name="activity_transfer_details_fee">Fee</string>
    <string name="activity_transfer_details_id">Transfer Id</string>
    <string name="activity_transfer_details_from">From</string>
    <string name="activity_transfer_details_to">To</string>
    <string name="activity_transfer_details_open_explorer">Open in Explorer</string>
    <string name="activity_transfer_details_go_to_chat">Go to chat</string>
    <string name="bottom_menu_title_wallet">Wallet</string>
    <string name="bottom_menu_title_chats">Chats</string>
    <string name="bottom_menu_title_settings">Settings</string>
    <string name="fragment_create_chat_title">Create chat</string>
    <string name="fragment_create_chat_attention">You can add the recipient\'s address through an image from the gallery or by scanning the QR code:</string>
    <string name="fragment_create_chat_show_my_qr">Show my QR-code</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_wallet_address_title">Number</string>
    <string name="fragment_wallet_balance_title">Balance</string>
    <string name="fragment_wallet_free_tokens_title">🎁 Free tokens</string>
    <string name="fragment_wallet_create_qrcode_title">Show QR-code</string>
    <string name="fragment_wallet_send_funds">Send %s</string>
    <string name="fragment_wallet_see_all">All</string>
    <string name="fragment_wallet_last_transactions_title">Latest %s transactions</string>
    <string name="fragment_settings_general_title">General</string>
    <string name="fragment_settings_language">Language</string>
    <string name="fragment_settings_nodes">Nodes list</string>
    <string name="fragment_settings_choose_language">Choose language</string>
    <string name="fragment_settings_version">Version: %s</string>
    <string name="fragment_settings_store_keypair">Stay logged in</string>
    <string name="fragment_settings_subscribe_to_push_notifications">Push notifications</string>
    <string name="fragment_settings_tee_verifying">Verifying encryption system…</string>
    <string name="fragment_settings_success_saved">Settings saved successfully</string>
    <string name="address_was_copied">Copied!</string>
    <string name="qrcode_was_created_in_gallery">QR-code has been saved in gallery</string>
    <string name="dialog_logout_title">Exit</string>
    <string name="dialog_logout_message">Are you sure you want to quit?</string>
    <string name="rationale_qrcode_write_permission">Application needs a write permission for save QR code in your gallery.</string>
    <string name="activity_scan_qrcode_camera_permission_view">No permission to access camera</string>
    <string name="list_item_currency_send_not_supported">This currency is not supported yet</string>
    <string name="list_item_currency_send_amount_hint">Amount for send. Max: %s %s</string>
    <string name="list_item_currency_send_address_hint">For user \"%s\"</string>
    <string name="list_item_currency_send_fee_hint">Fee</string>
    <string name="list_item_currency_send_totalAmount_hint">Total amount</string>
    <string name="list_item_currency_send_reminder_hint">Your account balance after transfer %s %s</string>
    <string name="list_item_currency_send_comment_hint">Comment. %s/%s symbols</string>
    <string name="wrong_passphrase">Wrong passphrase</string>
    <string name="authorization_error">Authorization error, we try reconnecting…</string>
    <string name="pincode_authorization_error">Authorization error, failed to connect to server</string>
    <string name="account_not_found">Account not found, sorry</string>
    <string name="wrong_address">Incorrect recipient address</string>
    <string name="empty_message">Message cannot be empty</string>
    <string name="wrong_node_address">Node\'s address has incorrect format</string>
    <string name="unsupported_message_type">Unsupported message type: %s</string>
    <string name="invalid_word_in_passphrase">Word not found in word list: "%s", suggestions "%s", "%s"</string>
    <string name="invalid_symbol_in_passphrase">Invalid symbol in passphrase. Available only [a-z] and space</string>
    <string name="invalid_count_words_in_passphrase">Wrong count of words in passphrase. Need 12, current count: %d. Necessary: %d</string>
    <string name="invalid_checksum_in_passphrase">Invalid checksum</string>
    <string name="not_a_number">This value must be a number.</string>
    <string name="empty_pincode">PIN-code can not be empty</string>
    <string name="encryption_error">Encryption error</string>
    <string name="wrong_pincode">Wrong PIN-code. %1$d attempts left until PIN reset</string>
    <string name="wrong_pincode_length">Wrong PIN-code length (expected: %s)</string>
    <string name="wrong_pincode_one_symbol">For pin-code can not use a sequence of one digit</string>
    <string name="pincode_unconfirmed">PIN codes do not match, try again</string>
    <string name="pincode_exceeding_the_number_of_attempts">Exceeding the number of attempts to enter a pin code. %d seconds left.</string>
    <string name="pincode_exceeded_limit">Exceeding the number of attempts to enter a pin code. Pin code was cleared.</string>
    <string name="unsubscribe_push_error">Failed to disable Push notification. Try again.</string>
    <string name="tee_not_supported">We were unable to confirm that your device is using Trusted Environment Execution, saving the authorization may not be secure.
        Some devices emulate TEE using files available with root access. Continue?</string>
    <string name="adamant_system_notification_channel">Important operation</string>
    <string name="adamant_default_notification_channel">New message</string>
    <string name="encrypt_keypair_notification_message">Executing encrypt keypair</string>
    <string name="save_contacts_notification_message">Saving contact list</string>
    <string name="default_notification_message">You have a new message</string>
    <string name="new_message_scanning_notification_message">Search for new messages</string>
    <string name="fcm_notification_service_short">FCM</string>
    <string name="fcm_notification_service_change_token_title">FCM updated token</string>
    <string name="fcm_notification_service_change_token_message">FCM updated token. %s ADM has been withdrawn from your account</string>
    <string name="fcm_notification_service_full">Firebase Messaging Service</string>
    <string name="fcm_notification_service_description">Notifications of new messages are sent by the ADAMANT Notification Service (Transport to your device is the Firebase Messaging Service).
             Notifications come almost instantly, but you need to register the device in the service. It is safe and maintains a high level of security. The cost of subscription, unsubscribe and token change (FCM can replace it at any time, but this rarely happens) is 0.001 ADM.</string>
    <string name="local_notification_service_short">Local</string>
    <string name="local_notification_service_full">Background service</string>
    <string name="local_notification_service_description">Description of Background service</string>
    <string name="copy">Copy</string>
</resources>