<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/line_divider"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_transfer_details_amount" />


            <TextView
                android:id="@+id/amount"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="0.49 ADM"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_status" />

            <TextView
                android:id="@+id/status"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Success"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_date" />

            <TextView
                android:id="@+id/date"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="May 15, 2018, 20:23"
                android:textAlignment="textEnd" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_confirmations" />

            <TextView
                android:id="@+id/confirmations"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="7017777"
                android:textAlignment="textEnd" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_fee" />

            <TextView
                android:id="@+id/fee"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="0.5 ADM"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_from" />

            <TextView
                android:id="@+id/from"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Random User\n
U15423595369615486571"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_to" />

            <TextView
                android:id="@+id/to"
                style="@style/AdamantLight.TextExplanationEnlarged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Random User\n
U15423595369615486571"
                android:textAlignment="textEnd" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/explorerGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="?selectableItemBackground"
            android:padding="16dp">

            <TextView
                style="@style/AdamantLight.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_transfer_details_open_explorer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/chatGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_transaction_details_item_height"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/chatLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_message"
                android:drawablePadding="8dp"
                android:text="@string/activity_transfer_details_start_chat" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
